dogs made bigger, animated text overflow fixed

--- a/src/styles/partials/about.scss
+++ b/src/styles/partials/about.scss
@@ -3,7 +3,7 @@
     h2 {
         font-size: calc(1rem + 0.9vw);
     }
-    p {
+    p, .email-link {
         font-size: calc(.7rem + 0.9vw);
     }
 }
