--- a/src/styles/partials/experience.scss
+++ b/src/styles/partials/experience.scss
@@ -6,6 +6,8 @@
 .animation-container {
     position: relative;
   .animated-words {
+    overflow: hidden;
+    max-height: 50px;
     font-family: 'Cookie';
     max-width: 100vw;
     font-size: 2rem;
@@ -35,13 +37,13 @@
     margin-bottom: 2rem;
     .project-item{
     border-style: solid;
-    border-radius: 2px;
+    border-radius: 5px;
     margin: 1rem;
     border-color: #766a78;
     background-color: #766a78;
     display: flex;
     flex-direction: column;
-    max-width: 125px;
+    max-width: 182px;
 }
     p {
       margin-bottom: 0;
